--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
 .App {
   text-align: center;
+  background-color: #29231e;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.title {
   color: white;
+  background-color: #29231e;
+  margin-top: -22px;
+  padding-top: 22px;
 }
-
-.App-link {
-  color: #61dafb;
+.btns {
+  height: 7em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row-reverse;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.btn {
+  margin: 1em;
+  width: 6em;
+  height: 3em;
+  border-radius: 10px;
+  font-size: 15px;
+  color: whitesmoke;
+  border: none;
+}
+.btn:nth-child(2){
+  background-color: #4f3922;
+}
+.btn:nth-child(1){
+  background-color: #194f37;
+}
+.btn:hover {
+  box-shadow: 1px 1px 10px #0e0505;
+}
+.settingsbtn {
+  position: fixed;
+  right: 1vw;
+  top: 1vh;
+  opacity: 20%;
+}
+.settingsimg {
+  width: 4vw;
+  background-color: #fff;
+}
+@media (max-width: 900px) {
+  .btnl:hover{
+    box-shadow: none;
   }
-  to {
-    transform: rotate(360deg);
+  .btnr:hover{
+    box-shadow: none;
+  }
+  .btn:hover {
+    box-shadow: none;
+  }
+  .settingsimg {
+    width: 7vw;
+    background-color: #fff;
   }
 }
